# avakill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GITHUB-METADATA-TODO.md  LICENSE  Makefile  README.md  avakill.yaml  banner_proto.py  llms.txt  pyproject.toml  setup.py  vercel.json
.claude/plans/: typed-sleeping-dream.md
.gemini/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/avakill-shim/: avakill-shim  diagnose.go  env.go  env_test.go  evaluator.go  evaluator_test.go  go.mod  go.sum  jsonrpc.go  jsonrpc_test.go  killswitch.go  killswitch_test.go  main.go  path_match.go  path_match_test.go  policy.go  policy_test.go  proxy.go  proxy_test.go  race_test.go  scanner.go  scanner_config.go  scanner_test.go  shell_analysis.go  shell_analysis_test.go  toolhash.go  toolhash_config.go  toolhash_test.go
docs/: UX.md  api-reference.md  architecture.md  audit.md  cli-reference.md  cookbook.md  deployment.md  framework-integrations.md  getting-started-PROPOSED.md  getting-started.md  llm-policy-prompt.md  mcp-proxy.md  observability.md  policy-reference.md  process-launcher.md  sandbox-backends.md  security-hardening.md  shim-feature-prompts.md  troubleshooting.md  tutorial-you-couldve-invented-avakill.md  upgrade-to-launch-mode.md
docs/internal/: defense-in-depth.md  deployment.md  mcp-proxy-universal.md  observability.md  rules.md  security-hardening.md  troubleshooting.md  tutorial-you-couldve-invented-avakill.md
docs/plans/: 2026-02-20-interactive-guide-command.md  2026-02-20-openai-codex-adapter-design.md  2026-02-20-openai-codex-adapter-plan.md  2026-02-20-quickstart-onboarding-design.md  2026-02-20-quickstart-onboarding.md  2026-02-21-product-audit-v0.4.0.md  2026-02-25-shim-ast-shell-analysis-design.md  ux-feedback-session-prompts.md
examples/: anthropic_tool_use.py  demo_policy.yaml  demo_scenarios.py  docker-compose.hardened.yml  langchain_agent.py  mcp_proxy_setup.py  openai_function_calling.py  quickstart.py
examples/systemd/: avakill.service
scripts/: build-docs.py  bump-version.py  install-shim.sh
site/: index.html  privacy.html  welcome-email.mjml
site/dashboard/: index.html
site/docs/: _template.html  index.html
site/docs/api-reference/: index.html
site/docs/architecture/: index.html
site/docs/cli-reference/: index.html
site/docs/getting-started/: index.html
site/docs/policy-reference/: index.html
site/lp-concept/: index.html
site/rules/: index.html
src/agentguard/: __init__.py
src/agentguard/cli/: __init__.py  dashboard_cmd.py  init_cmd.py  logs_cmd.py  main.py  mcp_proxy_cmd.py  validate_cmd.py
src/agentguard/core/: __init__.py  engine.py  exceptions.py  models.py  policy.py
src/agentguard/interceptors/: anthropic_wrapper.py  decorator.py  langchain_handler.py  openai_wrapper.py
src/agentguard/logging/: __init__.py  base.py  event_bus.py  sqlite_logger.py
src/agentguard/mcp/: __init__.py  proxy.py
src/agentguard/templates/: default.yaml  permissive.yaml  strict.yaml
src/avakill/: __init__.py  __main__.py  _avakill_hooks.c  _telemetry.py  metrics.py  schema.py
src/avakill/analytics/: __init__.py  engine.py
src/avakill/cli/: __init__.py  approval_cmd.py  approve_cmd.py  banner.py  check_hardening_cmd.py  compliance_cmd.py  config.py  daemon_cmd.py  dashboard_cmd.py  enforce_cmd.py  evaluate_cmd.py  fix_cmd.py  guide_cmd.py  harden_cmd.py  hook_cmd.py  init_cmd.py  keygen_cmd.py  launch_cmd.py  logs_cmd.py  main.py  mcp_proxy_cmd.py  mcp_wrap_cmd.py  metrics_cmd.py  profile_cmd.py  quickstart_cmd.py  recovery_panel.py  reset_cmd.py  review_cmd.py  rule_catalog.py  rules_cmd.py  scanner.py  schema_cmd.py  setup_cmd.py  sign_cmd.py  tracking_cmd.py  validate_cmd.py  verify_cmd.py
src/avakill/compliance/: __init__.py  assessor.py  frameworks.py  reporter.py
src/avakill/core/: approval.py  audit_hooks.py  call_tagger.py  cascade.py  command_parser.py  content_scanner.py  correlation.py  engine.py  exceptions.py  integrity.py  models.py  normalization.py  path_resolution.py  policy.py  rate_limit_store.py  recovery.py  self_protection.py  session_store.py  shell_analysis.py  watcher.py
src/avakill/daemon/: __init__.py  client.py  protocol.py  server.py  transport.py
src/avakill/enforcement/: __init__.py  landlock.py  sandbox_exec.py  tetragon.py  windows.py
src/avakill/hardening/: __init__.py  apparmor.profile  seccomp.json  selinux.te
src/avakill/hooks/: __init__.py  agent_context.py  base.py  claude_code.py  cursor.py  gemini_cli.py  installer.py  openai_codex.py  windsurf.py
src/avakill/interceptors/: __init__.py  anthropic_wrapper.py  decorator.py  langchain_handler.py  openai_wrapper.py
src/avakill/launcher/: __init__.py  core.py  pty_relay.py
src/avakill/logging/: __init__.py  base.py  event_bus.py  sqlite_logger.py
src/avakill/mcp/: __init__.py  config.py  proxy.py  wrapper.py
src/avakill/profiles/: __init__.py  aider.yaml  cline.yaml  (+6 more)
tests/: __init__.py  conftest.py  test_agent_profiles.py  test_analytics.py  test_anthropic_interceptor.py  test_approval.py  test_audit_hooks.py  test_c_audit_hooks.py  test_call_tagger.py  test_cascade.py  test_cli.py  test_cli_compliance.py  test_cli_daemon.py  test_cli_enforce.py  test_cli_hook.py  test_cli_init.py  test_cli_launch.py  test_cli_mcp_wrap.py  test_cli_metrics.py  test_cli_profile.py  test_cli_quickstart.py  test_cli_reset.py  test_cli_rules.py  test_cli_scanner.py  test_cli_setup_menu.py  test_cli_sign_verify.py  test_command_parser.py  test_command_parser_integration.py  test_compliance.py  test_content_scan_integration.py  test_content_scanner.py  test_correlation.py  test_cross_call_integration.py  test_daemon_client.py  test_daemon_protocol.py  test_daemon_server.py  test_daemon_transport.py  test_darwin_sbpl.py  test_dashboard_collectors.py  test_dashboard_integration.py  (+54 more)
(+13 files in other folders)
