[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avakill"
version = "0.1.0"
description = "Open-source safety firewall for AI agents. Intercept tool calls. Enforce policies. Kill dangerous operations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Copyright 2026 AvaKill Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
langchain = ["langchain-core>=0.3"]
mcp = ["mcp>=1.0"]
all = [
    "avakill[openai]",
    "avakill[anthropic]",
    "avakill[langchain]",
    "avakill[mcp]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
avakill = "avakill.cli.main:cli"

[project.urls]
Homepage = "https://github.com/avakill/avakill"
Repository = "https://github.com/avakill/avakill"
Issues = "https://github.com/avakill/avakill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/avakill"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
