[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avakill"
version = "0.1.0"
description = "Open-source safety firewall for AI agents. Intercept tool calls. Enforce policies. Kill dangerous operations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Copyright 2026 AvaKill Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "aiosqlite>=0.20.0",
    "pyfiglet>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
langchain = ["langchain-core>=0.3"]
mcp = ["mcp>=1.0"]
signed-policies = ["PyNaCl>=1.5.0"]
hardened = []
otel = ["opentelemetry-api>=1.0,<2.0"]
metrics = ["prometheus-client>=0.20.0"]
watch = ["watchfiles>=1.0.0"]
all = [
    "avakill[openai]",
    "avakill[anthropic]",
    "avakill[langchain]",
    "avakill[mcp]",
    "avakill[signed-policies]",
    "avakill[hardened]",
    "avakill[otel]",
    "avakill[metrics]",
    "avakill[watch]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "opentelemetry-api>=1.0,<2.0",
    "opentelemetry-sdk>=1.0,<2.0",
    "prometheus-client>=0.20.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
avakill = "avakill.cli.main:cli"

[project.urls]
Homepage = "https://github.com/avakill/avakill"
Repository = "https://github.com/avakill/avakill"
Issues = "https://github.com/avakill/avakill/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
avakill = ["hardening/*.te", "hardening/*.profile", "hardening/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
